Debugging ConcurrentModificationException. Method public List<Organism> getOrganismsByType(Class<? extends Organism> type) changed.
Problem with ConcurrentModificationException solved